# miximus

./: .clang-format  .clang-tidy  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  TODO.md  dvp_test.cpp  info.txt
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt  app_state.cpp  app_state.hpp
src/config/: CMakeLists.txt
src/config/src/: config.cpp
src/core/: CMakeLists.txt  app_state.cpp  app_state.hpp  app_state_fwd.hpp  application_settings.cpp  application_settings.hpp  application_settings_fwd.hpp  application_settings_test.cpp  clock_source.cpp  clock_source.hpp  configuration.cpp  configuration.hpp  configuration_fwd.hpp  frame_context.hpp  frame_scheduler.cpp  frame_scheduler.hpp  frame_scheduler_fwd.hpp  node_manager.cpp  node_manager.hpp  node_manager_fwd.hpp  node_status_registry.cpp  node_status_registry.hpp  node_status_registry_fwd.hpp
src/core/adapters/: CMakeLists.txt  adapter_websocket.cpp  adapter_websocket.hpp
src/core/tests/: application_settings_test.cpp  frame_execution_test.cpp  frame_scheduler_test.cpp  output_timing_test.cpp  settings_node_test.cpp  source_timing_test.cpp
src/gpu/: AGENTS.md  CMakeLists.txt  color_transfer.hpp  color_transfer_review.md  context.cpp  context.hpp  context_fwd.hpp  context_logging.cpp  context_logging.hpp  draw_state.cpp  draw_state.hpp  framebuffer.cpp  framebuffer.hpp  framebuffer_fwd.hpp  geometry.hpp  glad.hpp  shader.cpp  shader.hpp  sync.cpp  sync.hpp  texture.cpp  texture.hpp  texture_fwd.hpp  textured_quad.cpp  textured_quad.hpp  types.cpp  types.hpp  vertex.hpp  vertex_array.cpp  vertex_array.hpp  vertex_attr.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/gpu/detail/: monitor_platform.hpp  monitor_platform_linux.cpp  monitor_platform_mac.cpp  monitor_platform_win.cpp
src/gpu/image/: CMakeLists.txt
src/gpu/transfer/: CMakeLists.txt  texture_download.cpp  texture_download.hpp  texture_download_fwd.hpp  texture_transfer.hpp  texture_upload.cpp  texture_upload.hpp  texture_upload_fwd.hpp  transfer.cpp  transfer.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/logger/src/: logger.cpp
src/media/: CMakeLists.txt  media_frame.hpp  output_buffer_watermark.hpp  source_clock.cpp  source_clock.hpp  timed_output_queue.hpp  timed_source_queue.hpp
src/messages/: CMakeLists.txt
src/nodes/: CMakeLists.txt  connection.cpp  connection.hpp  connection_type.hpp  frame_execution.cpp  frame_execution.hpp  frame_execution_fwd.hpp  interface.cpp  interface.hpp  interface_fwd.hpp  interface_type.cpp  interface_type.hpp  manager.cpp  manager.hpp  node.cpp  node.hpp  node_config.cpp  node_config.hpp  node_definition.hpp  node_fwd.hpp  node_manager.cpp  node_manager.hpp  node_map.hpp  node_map_fwd.hpp  node_type.hpp  normalize_option.hpp  option.cpp  option.hpp  option_result.hpp  option_typed.hpp  register.cpp  register.hpp  register_all.cpp  register_all.hpp  validate_option.hpp
src/nodes/adapters/: adapter_websocket.cpp  adapter_websocket.hpp
src/nodes/composite/: CMakeLists.txt  composite.hpp  draw_box.cpp  infinite_multiviewer.cpp  mix_tex_2.cpp  register.cpp  register.hpp
src/nodes/config/: CMakeLists.txt  adapter.hpp  adapter_websocket.cpp  adapter_websocket.hpp  config.cpp  config.hpp  manager.cpp  manager.hpp
src/nodes/debug/: CMakeLists.txt  circle_source.cpp  debug.hpp  register.cpp  register.hpp  sinus_source.cpp
src/nodes/decklink/: CMakeLists.txt  decklink.cpp  decklink.hpp  decklink_ptr.hpp  input.cpp  input.hpp  output.cpp  register.cpp  register.hpp  registry.cpp  registry.hpp  registry_fwd.hpp
src/nodes/dummy/: CMakeLists.txt  dummy.cpp  dummy.hpp
src/nodes/ffmpeg/: CMakeLists.txt  ffmpeg.hpp  player.cpp  register.cpp  register.hpp
src/nodes/generators/: CMakeLists.txt  register.cpp  register.hpp  test_pattern.cpp
src/nodes/math/: CMakeLists.txt  clamp.cpp  easing.cpp  lerp.cpp  math.cpp  math.hpp  operation.hpp  register.cpp  register.hpp
src/nodes/ndi/: CMakeLists.txt  input.cpp  output.cpp  register.cpp  register.hpp  registry.cpp  registry.hpp  registry_fwd.hpp
src/nodes/screen/: CMakeLists.txt  register.cpp  register.hpp  screen.cpp  screen.hpp  screen_output.cpp  screen_output_migrations.cpp  screen_output_migrations.hpp
src/nodes/switch/: CMakeLists.txt  register.cpp  register.hpp  switch.cpp
src/nodes/system/: CMakeLists.txt  register.cpp  register.hpp  settings.cpp
src/nodes/teleprompter/: CMakeLists.txt  register.cpp  register.hpp  teleprompter.cpp  teleprompter.hpp
src/nodes/text/: CMakeLists.txt  register.cpp  register.hpp  text.cpp
src/nodes/utils/: CMakeLists.txt  framebuffer.cpp  framebuffer_to_texture.cpp  rect.cpp  register.cpp  register.hpp  utils.hpp  vec2.cpp
src/render/: CMakeLists.txt  surface.hpp
src/render/font/: CMakeLists.txt  font_info.hpp  font_info_fwd.hpp  font_instance.cpp  font_instance.hpp  (+14 more)
src/types/: CMakeLists.txt  action.hpp  connection.cpp  connection.hpp  connection_set.hpp  error.hpp  frame_rate.cpp  frame_rate.hpp  interface_type.hpp  node_map.hpp  settings_option.cpp  settings_option.hpp  topic.hpp
src/utils/: CMakeLists.txt  asio.hpp  asio_fwd.hpp  bind.hpp  const_map.hpp  countof.hpp  flicks.hpp  frame_queue.hpp  is_finite.hpp  lookup.hpp  observed_value.hpp  process_id.hpp  serial_executor.hpp  serial_executor_fwd.hpp  string_utils.hpp  string_view.hpp  thread_guard.hpp  thread_priority.hpp  transparent_string_hash.hpp
src/web_server/: CMakeLists.txt  custom-config.hpp  payload.cpp  payload.hpp  payload_create.hpp  payload_parse.hpp  server.cpp  server.hpp  server_fwd.hpp  server_impl.cpp  server_impl.hpp  templates.cpp  templates.hpp  web_server.cpp  web_server.hpp
src/wrapper/: CMakeLists.txt
static/: CMakeLists.txt  check_web_src.cmake  exports.map  generate_resource_hash.cmake  generate_web_hash.cmake
static/bundler/: CMakeLists.txt  index.js  package-lock.json  package.json
static/shaders/: basic_frag.glsl  basic_vert.glsl
static/src/: CMakeLists.txt  files.cpp  shader_files.cpp  web_files.cpp
static/web/: package-lock.json  package.json
submodules/: CMakeLists.txt
(+188 files in other folders)
