target_sources(nodes
PRIVATE
    register.hpp
    register.cpp
    detail/allocator.hpp
    detail/allocator.cpp
    detail/device_monitor.hpp
    detail/device_monitor.cpp
    detail/device_reservation.hpp
    detail/output_video_buffer.hpp
    input.cpp
    output.cpp
    registry_fwd.hpp
    registry.hpp
    registry.cpp
)

target_link_libraries(nodes
PRIVATE
    gpu
PUBLIC
    decklink
)
