target_sources(nodes
PRIVATE
    registry_fwd.hpp
    registry.hpp
    registry.cpp
    register.hpp
    register.cpp
    detail/input_capture.hpp
    detail/input_capture.cpp
    detail/output_sender.hpp
    detail/output_sender.cpp
    input.cpp
    output.cpp
)

target_link_libraries(nodes
PUBLIC
    ndi
)
